<resources>
    <string name="app_name" translatable="false">Churrasco Calculator</string>
    <string name="adicionar_convidado">Add Guess</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="celular">CellPhone</string>
    <string name="masculino">Masculine</string>
    <string name="feminino">Faminine</string>
    <string name="sexo">Gender</string>
    <string name="selecione_os_itens_para_levar">Select items to take</string>
    <string name="boi">Boi</string>
    <string name="porco">Porco</string>
    <string name="frango">Frango</string>
    <string name="cerveja">Cerveja</string>
    <string name="suco">Suco</string>
    <string name="refrigerante">Refrigerante</string>
    <string name="acompanhante">Partners?</string>
    <string name="salvar">Save</string>
    <string name="limpar">Clear</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="campos_limpos_com_sucesso">Fields cleaned successful</string>
    <string name="nenhuma_opcao_selecionada">No option selected</string>
    <string name="foram_selecionados">Were selected</string>
    <string name="erro_phone">Phone must be filled</string>
    <string name="erro_nome">Name must be filled</string>
    <string name="erro_sexo">Select gender</string>
    <string name="foi_clicado">" Was clicked"</string>
    <string name="convidado">Guest</string>
    <string name="novo">New</string>
    <string name="sobre">About</string>
    <string name="sobre_objetivo">App to calculate barbecue items</string>
    <string name="autor">Author: Fabio Pedro Ribeiro</string>
    <string name="curso">Course: XXII Specialization Course in Java Technology</string>
    <string name="emailAutor">Email: si.fabioribeiro@gmail.com</string>
    <string name="erro_acompanhante">Let me know if you\'re bringing a partner</string>
    <string name="alterar">Change</string>
    <string name="excluir">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="alterar_convidado">Change Guess</string>
    <string name="novo_convidado">New Guess</string>
    <string name="sexoExibicao">"Gender: "</string>
    <string name="acompanhanteExibir">"Partner: "</string>
    <string name="deseja_realmente_apagar">Deseja realmente apagar?</string>
    <string name="aviso">Aviso</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmação</string>
    <string name="kg_08">0,8 KG</string>
    <string name="kg_04">0,4 KG</string>
    <string name="l_2">2 L</string>
    <string name="l_1">1 L</string>
    <string name="lt_12">12 LT</string>
    <string name="lt_6">6 LT</string>
</resources>