<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/adicionar_convidado"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="@+id/editTextNome"
            app:layout_constraintStart_toStartOf="@+id/editTextNome"
            app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

        <Spinner
            android:id="@+id/spinnerItens"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sexo"
            app:layout_constraintStart_toStartOf="@+id/editTextPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/selecione_os_itens_para_levar"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkBoxSuco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/suco"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/checkBoxCerveja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/cerveja"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSuco"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/checkBoxRefri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/refrigerante"
            app:layout_constraintStart_toEndOf="@+id/checkBoxCerveja"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/checkBoxFrango"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/frango"
            app:layout_constraintStart_toStartOf="@+id/checkBoxSuco"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSuco" />

        <CheckBox
            android:id="@+id/checkBoxPorco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/porco"
            app:layout_constraintStart_toEndOf="@+id/checkBoxFrango"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCerveja" />

        <CheckBox
            android:id="@+id/checkBoxBoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/boi"
            app:layout_constraintStart_toEndOf="@+id/checkBoxPorco"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxRefri" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            app:layout_constraintEnd_toEndOf="@+id/spinnerItens"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPorco" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="salvar"
            android:text="@string/salvar"
            app:layout_constraintStart_toStartOf="@+id/spinnerItens"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFrango" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/spinnerItens"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/radioButtonSim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sim" />

            <RadioButton
                android:id="@+id/radioButtonNao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nao" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/acompanhante"
            app:layout_constraintStart_toStartOf="@+id/spinnerItens"
            app:layout_constraintTop_toBottomOf="@+id/spinnerItens" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
